# AS_bot

./: .gitignore  README.md  exchangelib-4.9.0-py2.py3-none-any.whl  install.sh  pyproject.toml
models/: intents.pkl  perceptron.h5  words.pkl
notebooks/: chat_bot_model_learn.ipynb
settings/: bot_config.json
src/: main.py
